<resources>
    <string name="app_name">서울밥상</string>
    <!--로그인-->
    <string name="guest">손님</string>
    <string name="owner">사장님</string>
    <string name="login_screen_sentence_for_guest">우리동네 저렴한 식재료를 찾고있으세요?</string>
    <string name="login_screen_guest_login">손님으로 로그인</string>
    <string name="login_screen_sentence_for_owner">서울시에서 농수축산물 판매를 하고 계신가요?</string>
    <string name="login_screen_owner_login">사장님으로 로그인</string>
    <string name="failed_kakao_login">카카오 계정으로 로그인을 실패했습니다.</string>
    <string name="failed_naver_login">네이버 아이디로 로그인을 실패했습니다.</string>


    <!--회원가입-->
    <string name="signup">회원가입</string>
    <string name="user_info">회원정보</string>
    <string name="nickname">닉네임</string>
    <string name="input_nickname_hint">닉네임을 입력해주세요.</string>
    <string name="register">가입하기</string>
    <string name="owner_auth">사장님 인증</string>
    <string name="store_name">가게명</string>
    <string name="store_name_hint">자치구와 상호명을 적어주세요.</string>
    <string name="store_number">가게 대표번호</string>
    <string name="store_number_hint">`-`를 제외한 숫자를 입력해주세요.</string>
    <string name="owner_auth_notification">사장님은 해당 가게의 정보를 수정할 수 있기 때문에\n본인 인증이 필요해요.\n방문인증 후 자동으로 회원가입이 완료됩니다.</string>
    <string name="visit_sentence">적어주신 가게 주소로\n2~3일 내로 방문할 예정입니다.</string>
    <string name="choose_time_sentence">원하시는 방문 시간이 있다면 알려주세요!(복수선택)</string>
    <string name="choose_time_all">영업시간 내 언제든</string>
    <string name="choose_time_10_to_12">오전 10시~12시</string>
    <string name="choose_time_14_to_16">오후 2시~4시</string>
    <string name="choose_time_16_to_18">오후 4시~6시</string>
    <string name="choose_time_18_to_20">오후 6시~8시</string>
    <string name="signup_validate_failed">회원정보를 채워주세요.</string>
    <string name="signup_failed">회원가입에 실패했습니다.</string>


    <!--지도-->
    <string name="map_search_hint">찾으시는 품목을 검색하세요.</string>
    <string name="map_search_near">이 주변 검색</string>

    <!--검색-->
    <string name="search_recently">최근 검색어</string>
</resources>